fix: update readme

--- a/nbs/killed.ipynb
+++ b/nbs/killed.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "id": "f63a662e",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "Text(0.5, 1.0, 'Barrier option price - Call up-and-out with strike $K=100$, barrier $B=120$')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -288,12 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "id": "8ef3796d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(\"killed_diffusion/report/img/cuo_mc.pdf\", format=\"pdf\", bbox_inches='tight')"
+    "fig.savefig(\"killed_diffusion/report/img/cuo_mc.png\", format=\"png\", bbox_inches='tight')"
    ]
   },
   {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9631344c",
+   "id": "d774314e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0300dafb",
+   "id": "02fae82c",
    "metadata": {},
    "outputs": [],
    "source": []
