- feat: refactoring of the MC pricer for a drift, vol, f (payoff) passed as lambda expressions - experimental feat: declaring these functions in wrapper.cpp - experimental fix: CMake for pybind11 to allow windows/linux users to use the python cpp wrapper - fix: good looking function in monte_carlo.cpp - fix: typos in readme

--- a/nbs/main.ipynb
+++ b/nbs/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "d627eb19",
    "metadata": {},
    "outputs": [
@@ -31,10 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "9f0b910a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'killed_diffusion' from 'killed_diffusion' (c:\\Users\\cleme\\killed_diffusion\\killed_diffusion\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15760/1475640114.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkilled_diffusion\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mkilled_diffusion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'killed_diffusion' from 'killed_diffusion' (c:\\Users\\cleme\\killed_diffusion\\killed_diffusion\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -487,22 +499,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d774314e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02fae82c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "d4ddc949",
    "metadata": {},
@@ -624,27 +620,138 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03972a1b",
+   "cell_type": "markdown",
+   "id": "253e24bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Misc. Pathological case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2780c12c",
+   "metadata": {},
+   "source": [
+    "Proposition 1.1 Assume that $B$ and $\\sigma$ are globally Lipschitz functions, that $D$ is defined by $D=\\left\\{x \\in \\mathbb{R}^{d}: F(x)>0\\right\\}, \\partial D=\\left\\{x \\in \\mathbb{R}^{d}: F(x)=0\\right\\}$ for some globally Lipschitz function $F$. Provided that the condition (C) below is satisfied\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{( C )}: \\mathbb{P}_{x}\\left(\\exists t \\in[0, T] \\quad X_{t} \\notin D ; \\forall t \\in[0, T] \\quad X_{t} \\in \\bar{D}\\right)=0\n",
+    "$$\n",
+    "\n",
+    "for all function $f \\in C_{b}^{0}(\\bar{D}, \\mathbb{R})$, we have\n",
+    "\n",
+    "$$\n",
+    "\\lim _{N \\rightarrow+\\infty} \\mathcal{E}_{\\mathrm{c}}(f, T, x, N)=\\lim _{N \\rightarrow+\\infty} \\mathcal{E}_{\\mathrm{d}}(f, T, x, N)=0 .\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a11ce206",
+   "metadata": {},
+   "source": [
+    "Remark 1.1 Condition (C) rules out the pathological situation where the paths may reach $\\partial D$ without leaving $\\bar{D}$. An simple example of non convergence in this situation is the following: take $d=1, D=(-\\infty, \\exp (1)), B(y)=y, \\sigma(y) \\equiv 0, X_{0}=1, T=1$ and $f \\equiv 1$. In this deterministic situation, on one hand, we have $\\tau=1$ (condition (C) is not fulfilled) and on the other hand, $\\tilde{X}_{t}$ is an increasing function with $\\tilde{X}_{1}=\\left(1+N^{-1}\\right)^{N}<\\exp (1)$, so that $\\tilde{\\tau}_{c}>1$ and $\\tilde{\\tau}_{d}>1$ : thus, $\\mathcal{E}_{\\mathrm{c}}(f, T, x, N)=\\mathcal{E}_{\\mathrm{d}}(f, T, x, N)=1$ for all $N \\geq 1$.\n",
+    "\n",
+    "**Let's break the condition (C) and see what happens:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e52e9b76",
+   "metadata": {},
+   "source": [
+    "First and foremost, we require an extension of the above API written in C++. We generalize to the case of generic drift, diffusion and payoff functions, i.e.\n",
+    "<!-- define in latex the expression for B(y), \\sigma(y) and f as well -->\n",
+    "$$\n",
+    "y \\mapsto B(y) \\quad \\text { and } \\quad y \\mapsto \\sigma(y) \\quad \\text { and } \\quad ((S_t), K) \\mapsto f((S_t), K)\n",
+    "$$\n",
+    "See *montecarlo.cpp* for the implementation of the above pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5f28c82b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'killed_diffusion' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15760/3428057326.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mcuo_conv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mN_range\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     price = killed_diffusion.price_option_generic(\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[0mS0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mK\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'killed_diffusion' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "B = np.exp(1)\n",
+    "drift = lambda S: S\n",
+    "sigma = lambda S: 0\n",
+    "S0 = 1\n",
+    "T = 1\n",
+    "f = lambda S, K: 1 # digital option\n",
+    "N_range = [int(i**1.5) for i in range(1,150)]\n",
+    "\n",
+    "cuo_conv = []\n",
+    "for n in N_range:\n",
+    "    price = killed_diffusion.price_option_generic(\n",
+    "        S0,\n",
+    "        K,\n",
+    "        r,\n",
+    "        T,\n",
+    "        drift,\n",
+    "        sigma,\n",
+    "        N,\n",
+    "        M,\n",
+    "        L=-10,\n",
+    "        B=B,\n",
+    "        k_limit=10,\n",
+    "        f=f,\n",
+    "        gobet=False,\n",
+    "    )\n",
+    "    cuo_conv.append(price)\n",
+    "\n",
+    "cuo_gobet_conv = []\n",
+    "for n in N_range:\n",
+    "    price = killed_diffusion.price_option_generic(\n",
+    "        S0,\n",
+    "        K,\n",
+    "        r,\n",
+    "        T,\n",
+    "        drift,\n",
+    "        sigma,\n",
+    "        N,\n",
+    "        M,\n",
+    "        L=-10,\n",
+    "        B=B,\n",
+    "        k_limit=10,\n",
+    "        f=f,\n",
+    "        gobet=True,\n",
+    "    )\n",
+    "    cuo_gobet_conv.append(price)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f28c82b",
+   "id": "cc5f5e9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# \n",
+    "fig, ax = plt.subplots()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "term"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -656,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
